--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -4,27 +4,27 @@ title: Contact
 permalink: /contact/
 ---
 <section class="contact">
-  <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
+  <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> 返回</a>
   
   <div class="container_contact">
-  <h3 class="form_title">Send me message</h3>
+  <h3 class="form_title">给我发送消息</h3>
 
-  <form action="https://formspree.io/{{site.email}}" method="post" class="form">
+  <form action="https://formspree.io/f/xzbyvdyo" method="post" class="form">
     <div class="message js-form-message"></div>
     <div class="form_group">
-        <input type="text" placeholder="Your name" name="name" class="form-input" required>
+        <input type="text" placeholder="很高兴认识你，你叫什么呢？" name="name" class="form-input" required>
     </div>
     <div class="form_group">
-        <input type="email" placeholder="Your e-mail" name="_replyto" class="form-input" required>
+        <input type="email" placeholder="这里填写你的邮箱哦~" name="email_from" class="form-input" required>
     </div>
     <div class="form_group">
-        <input type="tel" placeholder="Your phone" name="form_tel" class="form-input">
+        <input type="tel" placeholder="还有电话别忘了~" name="telephone" class="form-input">
     </div>
     <div class="form_group">
-        <textarea name="Message" placeholder="Message" cols="25" rows="6" class="form-textarea" required></textarea>
+        <textarea name="Message" placeholder="你想对我说些什么呢~(✪ω✪)" cols="25" rows="6" class="form-textarea" required></textarea>
     </div>
     <div class="form_group">
-        <input type="submit" class="form_btn" value="Send">
+        <input type="submit" class="form_btn" value="bui~">
     </div>
   </form>
   </div>
